--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     </div>
 
     <div class="row-fluid col-xs-8 col-xs-offset-2">
-      
-      <button ng-click="tab = 1" class="contenu1">Contenu 1</button>
-      <button ng-click="tab = 2" class="contenu2">Contenu 2</button>
-      <div ng-show="tab === 1" id="contenu1">
-          <h2>Contenu 1 avec angular</h2>
+      <button class="contenu1" onclick="showContent1()">Contenu 1</button>
+      <button class="contenu2" onclick="showContent2()">Contenu 2</button>
+      <div id="contenu1">
+          <h2>Contenu 1</h2>
       </div>
 
-      <div ng-show="tab === 2" id="contenu2">
-          <h2>Contenu 2 avec angular</h2>
+      <div id="contenu2">
+          <h2>Contenu 2</h2>
       </div>
     </div>
     <!-- End Page Content -->
