--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html ng-app="demoApp">
   <head>
     <meta charset="utf-8">
     <title>AngularJs Course - IKNSA</title>
@@ -17,36 +17,21 @@
     </div>
 
     <div class="row-fluid col-xs-8 col-xs-offset-2">
-      <hr>
-      <input type="number" ng-model="amount" aria-label="amount"> <br>
-      default currency symbol ($): <span id="currency-default">{{amount | currency}}</span><br>
 
-      <h2>Filter to uppercase</h2>
-      {{ 'cette phrase était en minuscule' | uppercase }}
-
-      <h2>Filter array of object</h2>
-
-      <div ng-init="friends = [{name:'John', phone:'555-1276'},
-                               {name:'Mary', phone:'800-BIG-MARY'},
-                               {name:'Mike', phone:'555-4321'},
-                               {name:'Adam', phone:'555-5678'},
-                               {name:'Julie', phone:'555-8765'},
-                               {name:'Juliette', phone:'555-5678'}]">
+      <div ng-controller="friendsController">
+        <label>Search: <input ng-model="searchText"></label>
+        <table id="searchTextResults">
+          <tr><th>Name</th><th>Phone</th></tr>
+          <tr ng-repeat="friend in friends | filter:searchText | orderBy:'name'">
+            <td>{{friend.name}}</td>
+            <td>{{friend.phone}}</td>
+          </tr>
+        </table>
       </div>
-
-      <label>Search: <input ng-model="searchText"></label>
-      <table id="searchTextResults">
-        <tr><th>Name</th><th>Phone</th></tr>
-        <tr ng-repeat="friend in friends | filter:searchText">
-          <td>{{friend.name}}</td>
-          <td>{{friend.phone}}</td>
-        </tr>
-      </table>
       <hr>
     </div>
     <!-- End Page Content -->
     <script src="js/angular.min.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
